# computervision-YOLO

./: .gitignore  README.md  Ringkasan_Stakeholder_Computer_Vision_Framework_v3.docx  pyproject.toml  requirements.txt
configs/: config.yaml
pipelines/: inference_pipeline.py  training_pipeline.py  validation_pipeline.py  video_processing_pipeline.py
scripts/: extract_frames.py  inference.py  train.py  validate.py
services/: dataset_service.py  export_service.py  frame_extraction_service.py  inference_service.py  roboflow_service.py  training_service.py  validation_service.py  video_service.py
utils/: config.py  logger.py
